fix: text is now visible (#122)

--- a/src/CSS/HomePage.scss
+++ b/src/CSS/HomePage.scss
@@ -64,6 +64,7 @@
         position: absolute;
         top: 12vw;
         left: 43vw;
+        text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
     }
 
     &__title {
